# internal/domain/models.go
@@ -130,6 +130,9 @@ type PacketSnapshot struct {
 	OpenQuestionIDs      []string
 	SourceArtifactIDs    []string
 	MissingContext       []string
+	PublicReadable       bool
+	PublicToken          string
+	OGImagePath          string
 	CreatedAt            time.Time
 }
 
